--- a/blog.forecho.com/RichCalls Warden 使用指南.html
+++ b/blog.forecho.com/RichCalls Warden 使用指南.html
@@ -22,7 +22,7 @@ draft: false</p>
 <li><p>配置的时候需要输入登录密码的 MD5 值，可以使用 <a href="https://www.cmd5.com/">https://www.cmd5.com/</a> 获取到密码 MD5 加密之后的值，复制过来就可以（如下图）。
 <img alt="" src="https://img.forecho.com/iR7yhd.png"/></p>
 </li>
-<li><p>解锁密码要输入明文密码，不需要 MD5 加密。</p>
+<li><p>解锁密码同登录密码一样也是 MD5 加密之后的值。</p>
 </li>
 </ul>
 <h3>账户使用说明</h3>
@@ -38,7 +38,7 @@ draft: false</p>
 <p><img alt="" src="https://img.forecho.com/ZBrmfw.png"/></p>
 <p>说明一下：</p>
 <ul>
-<li>图上的条件就是你的策略，这里可玩性非常多，你可以自己划线，然后创建报警；你也可以使用 MA、EMA、BOLL 等指标来创建报警。至于怎么玩，完全取决于你的策略。</li>
+<li>图上的条件就是你的策略，这里可玩性非常多，你可以自己划线，然后创建报警；你也可以使用 MA、EMA、BOLL、RSI 等指标来创建报警。至于怎么玩，完全取决于你的策略。</li>
 <li>消息需要是 Warden 系统的一种固定格式，你需要做什么操作，完全取决于你的消息内容。</li>
 <li>WebHook Url 是你的 Warden 系统的 Url，不要泄露给别人。</li>
 </ul>
