--- a/index.html
+++ b/index.html
@@ -6,12 +6,16 @@
     <title>目录</title>
 </head>
 <body>
-    这里已聚合 51 个博客、8867 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
+    这里已聚合 51 个博客、8869 篇博文，跨越十多年的时光。同步、网页内容生成等源码都
     <a href="https://gitee.com/zhishi/collection-of-chinese-blogs/tree/master/%E5%8E%9F%E5%9E%8B">在此</a>
 
     <input id="搜索" type="text" placeholder="找找···">
 
     <ol>
+
+<li><a href=informal.top/First%20week%20of%20indie%20develop.html>2024-08-25 First week of indie develop</a></li>
+
+<li><a href=kexizeroing.github.io/Demystifying%20HMR%20and%20Source%20Maps.html>2024-08-24 Demystifying HMR and Source Maps</a></li>
 
 <li><a href=gitee.com/Kenneth-Lee-2012/MySummary/%E6%80%8E%E6%A0%B7%E7%90%86%E8%A7%A3%E9%80%92%E5%BD%92.html>2024-08-23 怎样理解递归</a></li>
 
