--- a/kexizeroing.github.io/Algorithm basics and sample problems.html
+++ b/kexizeroing.github.io/Algorithm basics and sample problems.html
@@ -1092,10 +1092,10 @@ function isSame(dict1, dict2) {
 <p>Given an integer array nums, return an array answer such that <code>answer[i]</code> is equal to the product of all the elements of nums except <code>nums[i]</code>.</p>
 <pre><code class="lang-js">var productExceptSelf = function(nums) {
   let n = nums.length;
-  let output =[];
+  let output = [];
 
-  let leftProducts =[];
-  let rightProducts =[];
+  let leftProducts = [];
+  let rightProducts = [];
   leftProducts[0] = 1;
   rightProducts[n - 1] = 1;
 
@@ -1173,6 +1173,28 @@ var subarraySum = function(nums, k) {
   return res;
 };
 </code></pre>
+<p>Given an array of integers nums and an integer k. A continuous subarray is called nice if there are k odd numbers on it. Return the number of nice sub-arrays.</p>
+<pre><code class="lang-js">var numberOfSubarrays = function(nums, k) {
+  let oddCount = 0;
+  let result = 0;
+  let count = new Map();
+  // key is the count of odd numbers encountered so far 
+  // value is the # of times we've encountered that particular count of odd numbers.
+  count.set(0, 1);
+
+  for (const num of nums) {
+    if (num % 2 === 1) {
+      oddCount += 1;
+    }
+    if (oddCount &gt;= k &amp;&amp; count.has(oddCount - k)) {
+      result += count.get(oddCount - k);
+    }
+
+    count.set(oddCount, (count.get(oddCount) || 0) + 1);
+  }
+  return result;
+};
+</code></pre>
 <p>Given an array of positive integers arr, return the sum of all possible odd-length subarrays of arr.</p>
 <pre><code class="lang-js">var sumOddLengthSubarrays = function(arr) {
   let ans = 0;
@@ -1191,27 +1213,6 @@ var subarraySum = function(nums, k) {
   }
 
   return ans;
-};
-</code></pre>
-<p>Given an array of integers nums and an integer k. A continuous subarray is called nice if there are k odd numbers on it. Return the number of nice sub-arrays.</p>
-<pre><code class="lang-js">var numberOfSubarrays = function(nums, k) {
-  // `count[3] = 2` means there are 2 positions where we've encountered exactly 3 odd numbers.
-  let count = Array(nums.length + 1).fill(0);
-  count[0] = 1;
-  let oddCount = 0;
-  let result = 0;
-
-  for (const num of nums) {
-    if (num % 2 === 1) {
-      oddCount += 1;
-    }
-    if (oddCount &gt;= k) {
-      result += count[oddCount - k];
-    }
-
-    count[oddCount]++;
-  }
-  return result;
 };
 </code></pre>
 <p>Given an array of integers and an integer <code>k</code>, find out whether there are two distinct indices <code>i</code> and <code>j</code> in the array such that <code>nums[i] = nums[j]</code> and the absolute difference between <code>i</code> and <code>j</code> is at most <code>k</code>.</p>
@@ -1611,21 +1612,21 @@ function isPalindrome(s, l, r) {
 </code></pre>
 <p>Given the root of a binary tree and an integer targetSum, return true if the tree has a root-to-leaf path such that adding up all the values along the path equals targetSum.</p>
 <pre><code class="lang-js">var hasPathSum = function(root, targetSum) {
-    if (root === null) {
+  if (root === null) {
     return false;
   }
-    if (root.val == targetSum &amp;&amp; (root.left === null &amp;&amp; root.right === null)) {
+  if (root.val === targetSum &amp;&amp; (root.left === null &amp;&amp; root.right === null)) {
     return true;
   }
 
-    return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
+  return hasPathSum(root.left, targetSum - root.val) || hasPathSum(root.right, targetSum - root.val);
 };
 </code></pre>
 <p>Given the root of a binary tree, determine if it is a valid binary search tree.</p>
 <pre><code class="lang-js">var isValidBST = function(root) {
   // Check range of each node
   const helper = (root, min, max) =&gt; {
-    if (!root) return true;
+    if (root === null) return true;
 
     if (root.val &lt; min || root.val &gt; max) return false;
 
