--- a/kexizeroing.github.io/Git knowledge that not clear to me.html
+++ b/kexizeroing.github.io/Git knowledge that not clear to me.html
@@ -167,7 +167,10 @@ git push origin recovered-branch:recovered-branch
 </ul>
 <h2>change the most recent commit message after push</h2>
 <p><code>git commit --amend</code> brings up the editor with the last commit message and lets you edit the message. You can use <code>-m</code> if you want to wipe out the old message and use a new one: <code>git commit --amend -m "new commit message"</code>. And then when you push, do <code>git push --force-with-lease &lt;repository&gt; &lt;branch&gt;</code>.</p>
+<h2>make empty commits</h2>
+<p><code>git commit --allow-empty -m 'trigger build'</code> allows you to trigger a commit with no content, skipping the error you would usually see that says you have nothing staged. This trick is especially useful when you need to kick off a CI run or even a production deployment without having to push arbitrary code.</p>
 <p>Btw, you can add a commit subject and description as follows: <code>git commit -m "subject line" -m "longer description"</code>.</p>
+<p>You can easily insert emojis into commit messages provided you know them by name. You can reference the <a href="https://gitmoji.dev">Gitmoji</a> cheatsheet to pick a relevant emoji, and insert it as text in your commit message.</p>
 <h2>rewrite history: squash commit, fixup and autosquash</h2>
 <ul>
 <li><a href="https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History">https://git-scm.com/book/en/v2/Git-Tools-Rewriting-History</a></li>
