--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -72,6 +72,7 @@ yarn add --dev typescript
 <p>By the way, <code>jsconfig.json</code> is a descendant of <code>tsconfig.json</code>. The presence of <code>jsconfig.json</code> file in a directory indicates that the directory is the root of a JavaScript project.</p>
 <h2>Basic Static Types</h2>
 <p>TypeScript brings along static types to the JavaScript language. <strong>TypeScript's types don't exist at runtime.</strong> They're only used to help you catch errors at compile time.</p>
+<p><a href="https://www.totaltypescript.com/ts-reset">ts-reset</a> from Total TypeScript is a 'CSS reset' for TypeScript, improving types for common JavaScript API's. For example, <code>.json()</code> and <code>JSON.parse</code> return unknown, <code>.filter(Boolean)</code> behaves exactly how you expect.</p>
 <pre><code class="lang-ts">let isAwesome: boolean = true;
 let name: string = 'Chris';
 let decimalNumber: number = 42;
