--- a/kexizeroing.github.io/Mac terminal.html
+++ b/kexizeroing.github.io/Mac terminal.html
@@ -142,7 +142,7 @@ This is also valid: bar
 $ echo 'Here is the content of: $foo'
 Here is the content of: $foo
 
-# Command substitution
+# Command substitution: $(command) is equal to command's stdout
 $ foo=$(echo bar)
 $ echo "\$foo is $foo, but this gives us the same result: $(echo $foo)"
 $foo is bar, but this gives us the same result: bar
@@ -153,7 +153,7 @@ $ echo $foo
 3
 </code></pre>
 <h2>Bash Conditionals</h2>
-<p>There are some commands designed specifically to test things and return an exit status based on what they find. The first such command is <code>test</code> (also known as <code>[</code>). A more advanced version is <code>[[</code>. <code>[[</code> is much like <code>[</code>, but it offers far more versatility. Read <code>man test</code> for more information.</p>
+<p>There are some commands designed specifically to test things and return an exit status based on what they find. The first such command is <code>test</code> (also known as <code>[</code>, <code>/usr/bin/[</code> is a program that evaluate statements). A more advanced version is <code>[[</code>. <code>[[</code> is much like <code>[</code>, but it offers far more versatility. Read <code>man test</code> for more information.</p>
 <pre><code class="lang-sh"># Comparing numbers
 $ num=1
 $ [[ $num == 1 ]] &amp;&amp; echo "$num is equal to 1"
