--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -6,7 +6,7 @@ slug: start-js-stack-project
 description: ""
 added: "Jun 16 2022"
 tags: [web]</p>
-<h2>updatedDate: "July 16 2024"</h2>
+<h2>updatedDate: "Aug 25 2024"</h2>
 <h2>Start a modern web project</h2>
 <pre><code class="lang-sh"># `npm create` is an alias for `npm init`
 npm create vite@latest
@@ -70,10 +70,12 @@ export const loader = async ({ params }: LoaderArgs) =&gt; {
 </code></pre>
 <blockquote><p>An <code>invariant</code> function from <a href="https://github.com/alexreardon/tiny-invariant">tiny-invariant</a> takes a value, and if the value is falsy then the invariant function will throw. If the value is truthy, then the function will not throw.</p>
 </blockquote>
-<h3>Using Lightning CSS</h3>
+<h3>Writing CSS in 2024</h3>
+<p><strong>CSS Modules</strong> are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
+<p><strong>Tailwind</strong> uses a compiler to generate only the classes used. So while the utility CSS framework contains many possible class names, only the classes used will be included in the single, compiled CSS file. Tailwind classes are just utilities for normal CSS that adhere to a design system. You can mix and match Tailwind with CSS Modules.</p>
+<p><strong>CSS-in-JS libraries</strong> which require runtime JavaScript are not currently supported in Server Components. Using CSS-in-JS with newer React features like Server Components and Streaming requires library authors to support the latest version of React.</p>
 <p><a href="https://lightningcss.dev">Lightning CSS</a> is an extremely fast CSS parser, transformer, and minifier written in Rust. It lets you use modern CSS features and future syntax today. Features such as CSS nesting, custom media queries, high gamut color spaces, logical properties, and new selector features are automatically converted to more compatible syntax based on your browser targets. Lightning CSS is used by Vite, and soon by Tailwind and Next.js. Tools like <code>postcss</code> and <code>autoprefixer</code> are being replaced by faster, all-in-one Rust toolchains.</p>
-<p>It can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
-<p>CSS Modules are a small but impactful enhancement on top of vanilla CSS. A CSS Module is a CSS file where all class names and animation names are scoped locally by default. They treat the classes defined in each file as unique. Each class name or identifier is renamed to include a unique hash, and a mapping is exported to JavaScript to allow referencing them. CSS Modules are available in almost every <a href="https://github.com/css-modules/css-modules/blob/master/docs/get-started.md">modern bundler and framework</a>.</p>
+<p>Lightning CSS can be used as a library from JavaScript or Rust, or from a standalone CLI. It can also be wrapped as a plugin in other build tools, and it is built into Parcel out of the box. For example, as a standalone CLI, it can be used to compile, minify, and bundle CSS files: <code>lightningcss --minify --bundle --targets 'defaults' input.css -o output.css</code>.</p>
 <h3><code>module</code> and <code>require</code> in Node.js</h3>
 <p><strong>Node.js treats each JavaScript file as a separate module and encloses the entire code within a function wrapper</strong>: <code>(function(exports, require, module, __filename, __dirname) {})</code>. The five parameters — <code>exports</code>, <code>require</code>, <code>module</code>, <code>__filename</code>, <code>__dirname</code> are available inside each module. Even if you define a global variable in a module using <code>let</code> or <code>const</code> keywords, the variables are scoped locally to the module rather than being scoped globally.</p>
 <p>The <code>module</code> parameter refers to the object representing the current module and <code>exports</code> is a key of the <code>module</code> object which is also an object. <code>module.exports</code> is used for defining stuff that can be exported by a module. <code>exports</code> parameter and <code>module.exports</code> are the same unless you reassign <code>exports</code> within your module.</p>
@@ -131,48 +133,6 @@ module.exports = {
 <blockquote><p>When a file is edited, the dev server recompiles with the changes, then pushes a notification to the client code in the browser. The app code can then subscribe to "some file changed" notifications, re-import the new version of the code, and swap out the old code for the new code as the app is still running.</p>
 </blockquote>
 <p><strong>Live Reload</strong> refreshes the entire app when a file changes. For example, if you were four links deep into your navigation and saved a change, live reloading would restart the app and load the app back to the initial route. <strong>Hot Reload</strong> only refreshes the files that were changed without losing the state of the app. (Webpack's <strong>Hot Module Replacement</strong> replaces the modules that have been modified on the fly without reloading the entire page). The advantage of this is that it doesn't lose your app state, e.g. your inputs on your form fields, your currently selected tab.</p>
-<h3>Source Map</h3>
-<p>Once you've compiled and minified your code, normally alongside it will exist a sourceMap file(<code>file.js.map</code>). <strong>It helps us with debugging transformed code in its original form</strong>. The bundler will add a source map location comment <code>//# sourceMappingURL=/path/to/file.js.map</code> at the end of every generated bundle, which is required to signify to the browser devtools that a source map is available. Another type of source map is inline which has a base64 data URL like <code># sourceMappingURL=data:application/json;base64,xxx...</code></p>
-<p>In development all the source files have associated source maps, but we would not want to ship source maps to our production servers.</p>
-<ul>
-<li>Source maps are usually large; they could be several hundreds of KBs even after compression.</li>
-<li>We may not want to share the original source code of our application with the users.</li>
-</ul>
-<p><a href="https://github.com/danvk/source-map-explorer">source-map-explorer</a> can be used to analyze and debug space usage through source maps. It shows you a treemap visualization to help you debug where all the code is coming from. Note that use your production builds to inspect bundle size with <code>source-map-explorer</code> to ensure you’re previewing optimized code.</p>
-<pre><code class="lang-sh">npm install -g source-map-explorer
-# Default behavior - write HTML to a temp file and open it in your browser
-source-map-explorer bundle.min.js
-
-# Write output in specific formats to a file
-source-map-explorer bundle.min.js --html result.html
-source-map-explorer bundle.min.js --json result.json
-
-# Get help
-source-map-explorer -h
-</code></pre>
-<p>&lt;img alt="source-map-explorer" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/008i3skNly1gx2pz85jf1j31lf0u07aa.jpg" width="800" /&gt;</p>
-<p>One more thing, Chrome DevTools parses the <a href="https://developer.chrome.com/articles/x-google-ignore-list">x_google_ignoreList</a> field in source maps to help improve developer debugging experience (to filter out generated code and let web developers focus only on the code they author.)</p>
-<pre><code class="lang-js">/* demo.js.map */
-{
-  "version": 3,
-  "mappings": "AAAAA, ..." 
-  "sources": [
-    "app.js",
-    "components/Button.ts",
-    "node_modules/.../framework.js",
-    "node_modules/.../library.js",
-    ...
-  ],
-  "x_google_ignoreList": [2, 3],
-  ...
-}
-</code></pre>
-<blockquote><p>Learn source maps from Google Chrome Developers</p>
-<ul>
-<li>What are source maps: <a href="https://web.dev/articles/source-maps">https://web.dev/articles/source-maps</a></li>
-<li>Using source maps in DevTools: <a href="https://www.youtube.com/watch?v=SkUcO4ML5U0">https://www.youtube.com/watch?v=SkUcO4ML5U0</a></li>
-</ul>
-</blockquote>
 <h2>Set up Prettier and ESLint</h2>
 <p>Install <code>Prettier</code> and <code>ESLint</code> VSCode plugins and enable <code>format on save</code> in settings (execute <code>save without formatting</code> command to disable). If you don't see the code formatted automatically on file save then it might be because you have multiple formatters installed in VS Code. Set <code>Format Document With...</code> and choose prettier to get it working.</p>
 <p>Install npm packages <code>npm i -D eslint prettier</code>. ESLint only as an npm package does not provide any editor integration, only the CLI executable. Run <code>eslint --init</code> to create a <code>eslintrc.json</code> (or <code>.js</code>, <code>.yml</code>) config file after install eslint globally <code>npm i -g eslint</code> (otherwise need to run <code>./node_modules/eslint/bin/eslint.js --init</code>), pick the options as you prefer. Add <code>eslint src</code> as a lint script which can be run as <code>npm run lint</code>, and it shows eslint errors in the Problems tab. Run <code>npm run lint -- --fix</code> to fix errors (if not format on save).</p>
