--- a/kexizeroing.github.io/Using images in web.html
+++ b/kexizeroing.github.io/Using images in web.html
@@ -6,7 +6,7 @@ slug: using-images-in-web
 description: ""
 added: "Oct 12 2021"
 tags: [web]</p>
-<h2>updatedDate: "Feb 26 2024"</h2>
+<h2>updatedDate: "Aug 25 2024"</h2>
 <h2>Image file types</h2>
 <p>First, there are two types of compression: Lossless and Lossy.</p>
 <ul>
@@ -136,4 +136,30 @@ function MyComponent() {
     width: 100%;
   "
 /&gt;
+</code></pre>
+<h3>Universal lazy loading for placeholder images</h3>
+<p><a href="https://unlazy.byjohann.dev">unlazy</a> is intended to be used with the <code>loading="lazy"</code> attribute alongside (blurry) placeholder images. If you have a pre-generated blurry placeholder image, use the <code>src</code> attribute to specify it. Otherwise, you can use a BlurHash or ThumbHash to generate a placeholder image on the fly.</p>
+<pre><code class="lang-html">&lt;img
+  loading="lazy"
+  src="blurry placeholder ..."
+  data-srcset="image.png"
+  data-sizes="auto"
+&gt;
+
+&lt;img
+  data-src="image.jpg"
+  data-thumbhash="1QcSHQRnh493V4dIh4eXh1h4kJUI"
+&gt;
+</code></pre>
+<pre><code class="lang-js">import { lazyLoad } from 'unlazy'
+
+// Client-side lazily load all `img[loading="lazy"]` images
+lazyLoad()
+
+
+// Server-Side ThumbHash Decoding
+import { createPngDataUri } from 'unlazy/thumbhash'
+
+const thumbhash = '1QcSHQRnh493V4dIh4eXh1h4kJUI'
+const pngDataUri = createPngDataUri(thumbhash)
 </code></pre>
